[project]
name = "claude-config"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pyyaml>=6.0.3",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hooks --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["hooks"]
omit = ["hooks/dump_payload.py"]
